[package]
name = "space_traveller"
license = "MIT"
version = "0.3.0"
edition = "2021"
description = "A simple command-line game engine based on the MVC architecture, centered around cosmic space."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
termion = "3.0.0"
